--- a/scripts/vs-yearlongtimeline.rmd
+++ b/scripts/vs-yearlongtimeline.rmd
@@ -79,16 +79,38 @@ title_list = c(
 
 
 ```{r, echo=FALSE, warning=FALSE}
-Core_Questions<- StandardPart %>% select(record_id, state_do_you_reside, how_many_months_of_your_sa, what_is_your_current_level,
-                  do_you_have_a_deadline_tod, please_indicate_your_workl, where_you_typically_wor,
-                  test,in_a_typical_workday_how_m, in_a_typical_day_how_often,
-                  how_do_you_usually_handle,  funding_proposal, what_is_the_average_number,
-                  funding_agency,  hy, how_far_in_advance_do_you,
-                  what_is_the_length_of_supp, in_the_week_leading_to_a_p, when_you_typically_subm,
-                  stress_level_in_a_fundi, refereed_conference, wha_average_number,
-                  core_rank, if_you_submit_manuscripts,  far_in_advance_do_you,
-                  length_of_supp, in_the_week_leading_to_a_c,
-                  you_typically_subm, ss_level_in_a_fundi)
+Core_Questions <-
+  StandardPart %>% dplyr::select(
+    record_id,
+    state_do_you_reside,
+    how_many_months_of_your_sa,
+    what_is_your_current_level,
+    do_you_have_a_deadline_tod,
+    please_indicate_your_workl,
+    where_you_typically_wor,
+    test,
+    in_a_typical_workday_how_m,
+    in_a_typical_day_how_often,
+    how_do_you_usually_handle,
+    funding_proposal,
+    what_is_the_average_number,
+    funding_agency,
+    hy,
+    how_far_in_advance_do_you,
+    what_is_the_length_of_supp,
+    in_the_week_leading_to_a_p,
+    when_you_typically_subm,
+    stress_level_in_a_fundi,
+    refereed_conference,
+    wha_average_number,
+    core_rank,
+    if_you_submit_manuscripts,
+    far_in_advance_do_you,
+    length_of_supp,
+    in_the_week_leading_to_a_c,
+    you_typically_subm,
+    ss_level_in_a_fundi
+  )
 
 
 
@@ -415,7 +437,13 @@ plot_list <- list()
 
 time_line_plots <- c(13, 16, 17, 22, 25, 26)
 for (i in time_line_plots) {
-  # for (i in 18:19) {
+
+  if (i==13 |i==22){
+    y_title = "Responses"
+  } else{
+    y_title = ""
+  }
+  
   ylimit = 100
   
   temp <- count(Core_Questions[i])
@@ -431,19 +459,19 @@ for (i in time_line_plots) {
     theme_bw() +
     scale_y_continuous(breaks = seq(0, ylimit, by = 50),
                        limits = c(0, ylimit)) +
-    labs(x = "", y = "Count", title = title_list[i - 1]) +
+    labs(x = "", y = y_title, title = title_list[i - 1]) +
     theme(
-      text = element_text(size = 8),
+      text = element_text(size = 6),
       panel.grid.major = element_blank(),
       panel.grid.minor = element_blank(),
-      plot.title = element_text(hjust = 0.5),
+      plot.title = element_text(hjust = 0.5, size = 7),
       axis.text.x = element_text(
         face = "bold",
-        size = 8 ,
+        size = 6 ,
         angle = 30,
         hjust = 1
       ),
-      axis.text.y = element_text(face = "bold", size = 8)
+      axis.text.y = element_text(face = "bold", size = 6)
     ) + scale_x_discrete(limits = Ticks_list[[i - 1]])
 
   print(bar_plot)
@@ -455,12 +483,109 @@ for (i in time_line_plots) {
 final_plot <- ggarrange(plotlist = plot_list,
                       nrow = 2,
                       ncol = 3)
+
+
+
+  filename <- "Summary.pdf"
+  full_path <- file.path(plot_dir, filename)
+  ggsave(
+    full_path,
+    final_plot,
+    width = 8.5,
+    height = 5.5,
+    units = "in"
+  )
 ```
-```{r}
-library(superml)
-lbl = LabelEncoder$new()
+```{r, echo=FALSE}
+Timeline <- as.data.frame(cbind(NP = Core_Questions$A_N_Pro, PCP_weeks = Core_Questions$Com_Proposal, NC = Core_Questions$A_N_Conf_Pap, CCP_weeks = Core_Questions$far_in_advance_do_you)) 
 
-mean(lbl$fit_transform(Core_Questions$A_N_Pro))
 
+levels(factor(Timeline$NP))
+```
+
+```{r, echo=FALSE}
+
+
+
+Timeline <- Timeline %>%
+  mutate(NP = recode(NP, "1-2" = 2, "3-4" = 4,"5-6" = 6, "7-9" = 7, ">=10" = 10)) %>% 
+  mutate(NC = recode(NC, "1-2" = 1, "3-4" = 3,"5-6" = 5, "7-9" = 7, ">= 10" = 10)) %>% 
+  mutate(PCP_weeks = recode(PCP_weeks, "< 1 week" = 1, "1-2 weeks" = 2,"2-4 weeks" = 4, "1-2 months" = 8, "> 2 months" = 12)) %>% 
+  mutate(CCP_weeks = recode(CCP_weeks, "< 1 week" = 1, "1-2 weeks" = 2,"2-4 weeks" = 3, "1-2 months" = 6, "> 2 months" = 8))
+  
+
+Timeline_mean <- Timeline %>% summarise_all(mean)
+Timeline_mean <- floor(Timeline_mean)
+
+Timeline_melt <- melt(Timeline_mean)
+
+
+
+  bar_plot <- ggplot(data = Timeline_melt, aes(x = variable, y = value)) +
+    geom_bar(stat = "identity",
+             width = 0.5,
+             fill = "steelblue") +
+    theme_bw() +
+    theme(
+      panel.grid.major = element_blank(),
+      panel.grid.minor = element_blank(),
+      plot.title = element_text(hjust = 0.5, size = 12),
+      axis.text.x = element_text(face = "bold", size = 10)
+    ) + xlab("") + ylab("") + ggtitle("Average number of proposals, papers, and composition period [ in week ]")
+    
+  
+  print(bar_plot) 
+# Timeline_mean$Proposal_Weeks <- Timeline_mean$NP * Timeline_mean$PCP
+# Timeline_mean$Conf_Weeks <- Timeline_mean$NC * Timeline_mean$CCP
+
+
+```
+
+
+```{r, echo=FALSE}
+library(ggplot2)
+
+df <- data.frame(y = seq(1, 53, by = 1), x = 1)
+
+df.labs <-
+  data.frame(y = Timeline_melt$value,
+             lab = Timeline_melt$variable)
+
+Timeline_plot <- ggplot(df, aes(x = x, y = y, fill = y)) +
+  geom_tile() +
+  geom_text(data = df.labs, aes(x = 1, y = 18, label = "Working period on Proposal"), size=4) +
+  geom_text(data = df.labs, aes(x = 1, y = 42, label = "Working period on Conf. Paper"), size=4) +
+  geom_hline(yintercept=c(32), size=1, linetype="dashed") +
+  scale_fill_gradient(low = "green", high = "red", guide = FALSE) +
+  coord_flip() +
+  ggtitle("Timeline of an year") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(face = "bold", size = 10),
+        axis.title.x = element_text(face = "bold"))+
+  scale_y_continuous(limits = c(1, 53), breaks = seq(2, 52, by = 10))+
+  scale_x_continuous(breaks = pretty(df$y)) +
+  xlab("") + 
+  ylab("Weeks in a year") +  
+  theme(aspect.ratio = 0.09, plot.title = element_text(hjust = 0.5))
+Timeline_plot
+
+
+
+
+final_plot <- ggarrange(bar_plot,Timeline_plot,
+                      nrow = 2,
+                      ncol = 1)
+
+
+
+  filename <- "Timeline.pdf"
+  full_path <- file.path(plot_dir, filename)
+  ggsave(
+    full_path,
+    final_plot,
+    width = 8.5,
+    height = 5.5,
+    units = "in"
+  )
 ```
 
